--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   height: 40vmin;
   pointer-events: none;
 }
+.Movie-list{
+  width:50%;
+  height:50%;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +39,38 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.movie-list-img{
+  margin:8px;
+}
+
+.movie-detail{
+  margin:50px;
+}
+
+.Producer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin:75px;
+}
+
+.Producer img{
+  width: 300px;
+  height: 325px;
+}
+
+
+.Producer h3{
+  font-weight: bold;
+}
+
+.Actors h3{
+  font-weight: bold;
+}
+
+.Actors img{
+  width: 300px;
+  height: 350px;
 }
