--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,17 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'Poppins', sans-serif,
     monospace;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poppins', sans-serif;
+}
+
+
+p {
+  font-family: 'IBM Plex Sans KR', sans-serif;
+  font-size: 25px;
+}
+
