--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  color: white;
 }
 
 .App-logo {
@@ -73,4 +75,12 @@
 .Actors img{
   width: 300px;
   height: 350px;
+}
+
+#tae1 {
+  color: #282c34;
+}
+
+.jea-title{
+  font-family: 'Poppins', sans-serif;
 }
